@@ -1,0 +1,10 @@
+package ADAMK::Changes;
+
+use strict;
+use warnings;
+use Module::Changes::ADAMK ();
+
+our $VERSION = '0.11';
+our @ISA     = 'Module::Changes::ADAMK';
+
+1;
