@@ -28,6 +28,7 @@ use XML::Tiny                2.02 ();
 use Text::Table             1.114 ();
 use Params::Util             0.35 ();
 use IO::ScalarArray         2.110 ();
+use Perl::Version           1.009 ();
 use CPAN::Version             5.5 ();
 use Archive::Extract         0.30 ();
 use Object::Tiny::XS         1.01 ();
@@ -38,6 +39,7 @@ use ORLite::Migrate          0.03 ();
 use Module::Changes::ADAMK   0.10 ();
 use ADAMK::Util                   ();
 use ADAMK::Cache                  ();
+use ADAMK::Version                ();
 use ADAMK::SVN::Log               ();
 use ADAMK::SVN::Info              ();
 use ADAMK::Role::Trace            ();
