@@ -6,7 +6,7 @@ BEGIN {
 	$^W = 1;
 }
 
-use Test::More tests => 17;
+use Test::More tests => 18;
 use Test::NoWarnings;
 use Test::Script;
 
@@ -15,6 +15,7 @@ ok( $] >= 5.008, 'Perl version is new enough' );
 use_ok( 'ADAMK::Util'                   );
 use_ok( 'ADAMK::SVN::Log'               );
 use_ok( 'ADAMK::Cache'                  );
+use_ok( 'ADAMK::Version'                );
 use_ok( 'ADAMK::Role::File'             );
 use_ok( 'ADAMK::Role::SVN'              );
 use_ok( 'ADAMK::Role::Changes'          );
